--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,39 @@
 .list-group-item {
   line-height: 2.5;
 }
+
+/* Calendar Testing */
+#selectable .ui-state-default {
+  background: #64b5f6;
+}
+
+#feedback {
+  font-size: 1.4em;
+}
+
+#selectable .ui-selecting {
+  background: #FECA40;
+}
+
+#selectable .ui-selected {
+  background: #F39814;
+  color: white;
+}
+
+#selectable {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 450px;
+}
+
+#selectable li {
+  margin: 3px;
+  padding: 1px;
+  float: left;
+  width: 100px;
+  height: 80px;
+  font-size: 4em;
+  text-align: center;
+}
+
