--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,10 +1,22 @@
+:root {
+  --main-color1: #4794B3;
+  --main-color2: #99E2FF;
+  --main-color3: #80DBFF;
+  --main-color4: #B37736;
+  --main-color5: #FFC380;
+  --main-color6: #FF99AD;
+  --main-bg-color: white;
+  --main-txt-color: black;
+  --main-padding: 15px; 
+}
+
 .list-group-item {
   line-height: 2.5;
 }
 
 /* Calendar Testing */
 #selectable .ui-state-default {
-  background: #64b5f6;
+  background: var(--main-color3);
 }
 
 #feedback {
@@ -12,11 +24,11 @@
 }
 
 #selectable .ui-selecting {
-  background: #FECA40;
+  background: var(--main-color1);
 }
 
 #selectable .ui-selected {
-  background: #F39814;
+  background: var(--main-color6);
   color: white;
 }
 
@@ -24,15 +36,15 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 450px;
+  /* width: 450px; */
 }
 
-#selectable li {
+#selectable div {
   margin: 3px;
   padding: 1px;
-  float: left;
+  /* float: left;
   width: 100px;
-  height: 80px;
+  height: 80px; */
   font-size: 4em;
   text-align: center;
 }
