--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -10,36 +10,77 @@
   --main-padding: 15px; 
 }
 
-body {
-    background-color: var(--main-bg-color);
-    font-family: 'Aleo', serif;
+html, body, .block {
+  height: 100%;
+  background-color: var(--main-bg-color);
+  font-family: 'Aleo', serif;
+}
+
+nav ul li a:hover, nav ul li a.active {
+  background-color: rgba(0, 0, 0, .1);
+}
+
+.pink-nav {
+  background-color: var(--main-color6);
+}
+
+.blue-nav {
+    background-color: var(--main-color1);
 }
 
 .container {
-    padding-top: 250px;
+  padding-top: 250px;
 }
 
 h1 {
-    color: var(--main-color1);
+  color: var(--main-bg-color);
+  font-size: 50px;
+}
+
+p {
+  font-size: 24px;
 }
 
 .btn-large {
-    background-color: var(--main-color4) !important;
-    color: var(--main-bg-color) !important;
-    height: 54px;
-    width: 250px;
-}
-.click-animations button {
-    display: block;
-    margin: 20px auto;
-    padding: 10px;
-    width: 50%;
-    font-size: 30px;
-    border: none;
-    outline: none;
-    background: #30cc8b;
-    color: #fff;
-    cursor: pointer;
-    transition: 0.2s;
+  background-color: var(--main-color4) !important;
+  color: var(--main-bg-color) !important;
+  height: 54px;
+  width: 250px;
 }
 
+.click-animations button {
+  display: block;
+  margin: 20px auto;
+  padding: 10px;
+  width: 50%;
+  font-size: 30px;
+  border: none;
+  outline: none;
+  background: #30cc8b;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.2s;
+}
+
+#big-logo {
+  padding-left: 20px;
+  font-size: 36px;
+}
+
+#small-logo {
+  font-size: 24px;
+  margin-left: -350px;
+  margin-top: 20px;
+}
+
+#pink-page {
+  background-color: var(--main-color6);
+}
+
+#blue-page {
+  background-color: var(--main-color1);
+}
+
+footer {
+  padding-left: 0;
+}
